<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>com.corpa</groupId>
        <artifactId>parent</artifactId>
        <version>1.0.2</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.corpa</groupId>
    <artifactId>storm-parent</artifactId>
    <version>1.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>RealTimeProcess</name>
    <description>Storm topologies provides real-time message processing</description>

    <scm>
        <url>http://svn.corp.com/svn/trunk/storm2</url>
    </scm>

    <developers>
        <developer>
            <name>Jack</name>
            <organization>corpa</organization>
        </developer>
    </developers>
    
    <properties>
        <mystorm.version>1.0.1-SNAPSHOT</mystorm.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <surefire.redirectTestOutputToFile>true</surefire.redirectTestOutputToFile>
    </properties>
    
    <modules>
        <module>storm-common</module>
    </modules>

    <dependencies>
        <!--Compile-->
        <dependency>
            <groupId>com.corpa.storm</groupId>
            <artifactId>storm-core</artifactId>
            <version>0.0.8</version>
        </dependency>
        <dependency>
            <groupId>com.corpa.storm</groupId>
            <artifactId>storm-extensions</artifactId>
            <version>0.0.8</version>
        </dependency>
        <dependency>
            <groupId>com.corpa.utils</groupId>
            <artifactId>storm-utils</artifactId>
            <version>0.1.0</version>
        </dependency>
        <dependency>
            <groupId>com.corpa</groupId>
            <artifactId>storm-protocol</artifactId>
            <version>0.1.6</version>
        </dependency>

        <!--Provided-->
        <dependency>
            <groupId>com.storm</groupId>
            <artifactId>jstorm-client</artifactId>
            <version>0.9.6.3</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.storm</groupId>
            <artifactId>storm-client-extension</artifactId>
            <version>0.9.6.3</version>
            <scope>provided</scope>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.easymock</groupId>
            <artifactId>easymock</artifactId>
            <version>3.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <version>1.6.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-easymock</artifactId>
            <version>1.6.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito</artifactId>
            <version>1.6.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
            </testResource>
        </testResources>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>2.5.3</version>
                    <configuration>
                        <descriptorRefs>
                            <descriptorRef>jar-with-dependencies</descriptorRef>
                        </descriptorRefs>
                    </configuration>
                    <executions>
                        <execution>
                            <id>make-assembly</id>
                            <phase>package</phase>
                            <goals>
                                <goal>single</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>2.4</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <phase>none</phase>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.2</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
                </configuration>
                <version>2.18.1</version>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>all</id>
            <modules>
                <module>storm-a-processor</module>
                <module>storm-a-topology</module>
                <module>storm-b-processor</module>
                <module>storm-b-topology</module>
            </modules>
        </profile>
        <profile>
            <id>a</id>
            <modules>
                <module>storm-a-processor</module>
                <module>storm-a-topology</module>
            </modules>
        </profile>
        <profile>
            <id>b</id>
            <modules>
                <module>storm-b-processor</module>
                <module>storm-b-topology</module>
            </modules>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>corpa-central</id>
            <name>copra Central Repository</name>
            <url>http://mvnrepo.corpa.com/mvn/repository</url>
        </repository>
    </repositories>
</project>    